deploy/openshift-route-staging.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: staging-aidash
  namespace: perf-aidashboard
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    haproxy.router.openshift.io/timeout-tunnel: 300s
  labels:
    app: perf-aidashboard-staging
    app.kubernetes.io/name: perf-aidashboard-staging
    environment: staging
spec:
  host: <your host name>
  to:
    kind: Service
    name: perf-aidashboard-staging-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
